--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,47 +11,46 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary col-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="container-fluid">
-            <div class="container">
-                <a class="navbar-brand" href="../index.html"> 
-                    <img src="../assets/Logos/amazing_brand.png" alt="Bootstrap" width="48" height="25">
-                </a>
-            </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary col-12 col-sm-12 col-md-12 col-lg-12" role="navigation">
+        <div class="container-fluid justify-content-around">
+          <div class="container">
+            <a class="navbar-brand" href="../index.html">
+              <img src="./assets/Logos/amazing_brand.png" alt="Bootstrap" width="48" height="25">
+            </a>
+          </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse collapse navbar-collapse d-flex col col-sm-10 justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./upcoming.html">Upcoming Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pastevents.html">Past Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="#">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./stats.html">Stats</a>
-                </li>
-                </ul>
-            </div>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav navstyle">
+              <li class="nav-item active">
+                <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="../pages/upcoming.html">Upcoming Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="../pages/pastevents.html">Past Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="../pages/stats.html">Stats</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
 </header> 
 <main class="mb-2">
 
     <div class="subnavcontain d-flex row align-baseline"> 
         <div class="subnavrow d-flex column">
-            <div class="form-check form-check-inline">
+            <div class="form form-check-inline">
                 <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
                 <label class="form-check-label" for="inlineCheckbox1">1</label>
             </div>
-            <div class="form-check form-check-inline">
+            <div class="form-check-inline form-check-inline">
                 <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
                 <label class="form-check-label" for="inlineCheckbox2">2</label>
             </div>
