added js cards to html

--- a/pages/details.html
+++ b/pages/details.html
@@ -14,7 +14,7 @@
             <div class="container-fluid justify-content-around">
               <div class="container">
                 <a class="navbar-brand" href="../index.html">
-                  <img src="./assets/Logos/amazing_brand.png" alt="Bootstrap" width="48" height="25">
+                  <img src="../assets/Logos/amazing_brand.png" alt="Bootstrap" width="55" height="30">
                 </a>
               </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,62 +43,53 @@
         </header> 
 
 <main>
+  <div class="jsMainCon">
+  <div class="container-fluid bg-image d-flex justify-content-center">
 <h1>Details</h1>
+</div>
+<div class="m-5 backgc">
+  <div class="d-flex align-items-center justify-content-around cont1section">
+    <div class="divcontainer">
+      <div class="form-check form-check-inline">
+        <input class="form-check-input"  type="checkbox"  id="inlineCheckbox1"  value="option1"/>
+        <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2"/>
+        <label class="form-check-label" for="inlineCheckbox2">Museum</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3"/><label class="form-check-label" for="inlineCheckbox3">Costume Party</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4"/>
+        <label class="form-check-label" for="inlineCheckbox4">Music Concert</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5"/>
+        <label class="form-check-label" for="inlineCheckbox5">Race</label>
+      </div>
+    </div>
+    <form class="d-flex" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+      <button class="btn btn-outline-info" type="submit">Search</button>
+    </form>
+  </div>
+    <div class="container d-flex justify-content-center aling align-items-center border border-dark p-3 mt-2">
+      <div class="row">
+          <div class="col-6 object-fit-scale "><img src="https://i.postimg.cc/RZ9fH4Pr/halloween.jpg" alt="costume party" class="img-fluid"></div>
+          <div class="col-6 ">
+          <h3>Halloween Night</h3>
+          <p>Come in your scariest costume character to win amazing prizes.</p>
+          <p>Date: 2024-02-12</p>
+          <p>Category: Costume Party</p>
+          <p>Place: Room C</p>
+          <p>Capacity: 12000</p>
+          <p>Estimate: 9000</p>
+          <p>Price: $12</p>
+        </div>
+      </div> 
 
-<div class="subnavcontain d-flex row align-baseline"> 
-    <div class="subnavrow d-flex column">
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-            <label class="form-check-label" for="inlineCheckbox1">Category</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-            <label class="form-check-label" for="inlineCheckbox2">Category</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-            <label class="form-check-label" for="inlineCheckbox3">Category</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-            <label class="form-check-label" for="inlineCheckbox4">Cateogry</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-            <label class="form-check-label" for="inlineCheckbox5">Category</label>
-        </div>
-        <div class="input-group d-flex justify-content-end">
-            <div class="form-outline d-flex col">
-                <input type="search" id="form1" class="form-control"/>
-                <label class="form-label" for="form1"></label>
-            </div>
-            <button href="./assets/Images /Logos/" class="btn btn-primary"><i class="bi bi-search"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-search" viewBox="0 0 16 16">
-              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-            </svg></i>
-            </button>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-12 col-md-6 col-xl-4 row">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4 d-flex">
-                        <img src="../assets/Pictures/books.jpg" class="detailsimg img-fluid" alt="detailspic">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                  <h5 class="card-title">More details about events</h5>
-                  <p class="card-text">This event will be great because of the details, which are: Details details details details</p>
-                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-</div>
   
 
 
