--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/Logos/favicon.png" type="image/x-icon">
-    <title>Amazing Events</title>
+    
     <link rel="stylesheet" href="./Style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Amazing Events</title>
 </head>
 <body>
 <header>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary col-12 col-sm-12 col-md-12 col-lg-12" role="navigation">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary col-12 col-sm-12 col-md-12 col-lg-12">
     <div class="container-fluid justify-content-around">
       <div class="container">
         <a class="navbar-brand" href="./index.html">
-          <img src="./assets/Logos/amazing_brand.png" alt="Bootstrap" width="48" height="25">
+          <img src="./assets/Logos/amazing_brand.png" alt="Bootstrap" width="55" height="30">
         </a>
       </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav d-flex flex-col" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav navstyle">
+        <ul class="navbar-nav navstyle d-flex align-content-center">
           <li class="nav-item active">
             <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
@@ -42,90 +43,52 @@
       </div>
     </div>
   </nav>
-  
-<main>
+</header>
+<main class="div-flex-grow p-2x">
   <div class="container-fluid bg-image d-flex justify-content-center">
-    <h1>Home of Amazing Events</h1>
+    <h1 class="d-flex justify-content-center">Home of Amazing Events</h1>
   </div>
-  <div class="m-5 backgc">
-    <div class="d-flex align-items-center cont1section">
+  <div class="m-5">
+    <div class="d-flex align-items-center justify-content-around cont1section">
       <div class="divcontainer">
         <div class="form-check form-check-inline">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="inlineCheckbox1"
-            value="option1"
-          />
-          <label class="form-check-label" for="inlineCheckbox1"
-            >Food Fair</label
-          >
+          <input class="form-check-input"  type="checkbox"  id="inlineCheckbox1"  value="option1">
+          <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
         </div>
         <div class="form-check form-check-inline">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="inlineCheckbox2"
-            value="option2"
-          />
-          <label class="form-check-label" for="inlineCheckbox2"
-            >Museum</label
-          >
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+          <label class="form-check-label" for="inlineCheckbox2">Museum</label>
         </div>
         <div class="form-check form-check-inline">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="inlineCheckbox3"
-            value="option3"
-          />
-          <label class="form-check-label" for="inlineCheckbox3"
-            >Costume Party</label
-          >
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3"><label class="form-check-label" for="inlineCheckbox3">Costume Party</label>
         </div>
         <div class="form-check form-check-inline">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="inlineCheckbox4"
-            value="option4"
-          />
-          <label class="form-check-label" for="inlineCheckbox4"
-            >Music Concert</label
-          >
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+          <label class="form-check-label" for="inlineCheckbox4">Music Concert</label>
         </div>
         <div class="form-check form-check-inline">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="inlineCheckbox5"
-            value="option5"
-          />
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
           <label class="form-check-label" for="inlineCheckbox5">Race</label>
         </div>
       </div>
-
       <form class="d-flex" role="search">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-info" type="submit">Search</button>
       </form>
-    </div>  <div class="container-fluid">
-
+    </div>
+  </div>  
+<div class="cardscontainer d-flex row flex-grow-1" id="cardsContain">   
+</div>
 </main>
  
 <footer>
-  <div class="container">
+
       <div class="row">
           <div class="col-md-6">
             <div class="d-flex gap-3">
-              <img class="footerpics" src="./assets/Logos/facebook.png" alt="Facebook picture"/>
-              <img class="footerpics" src="./assets/Logos/instagram.png" alt="Instagram picture"/>
-              <img class="footerpics" src="./assets/Logos/whatsapp.png" alt="Whatsapp picture"/>
+              <img class="footerpics" src="./assets/Logos/facebook.png" alt="Facebook picture">
+              <img class="footerpics" src="./assets/Logos/instagram.png" alt="Instagram picture">
+              <img class="footerpics" src="./assets/Logos/whatsapp.png" alt="Whatsapp picture">
             </div>
           </div>
           <div class="col-6 d-flex justify-content-end">
@@ -134,11 +97,8 @@
       </div>
   </div>
 </footer>
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <script src="./data.js"></script>
-    <script src="./main.js"></script>
+] <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="./JS/data.js"></script>
+    <script src="./JS/index.js"></script>
 </body>
 </html>
