--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
         <div class="container-fluid justify-content-around">
           <div class="container">
             <a class="navbar-brand" href="../index.html">
-              <img src="./assets/Logos/amazing_brand.png" alt="Bootstrap" width="48" height="25">
+              <img src="../assets/Logos/amazing_brand.png" alt="Bootstrap" width="55" height="30">
             </a>
           </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,64 +42,68 @@
           </div>
         </div>
 </header> 
-<main class="mb-2">
-
-    <div class="subnavcontain d-flex row align-baseline"> 
-        <div class="subnavrow d-flex column">
-            <div class="form form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                <label class="form-check-label" for="inlineCheckbox1">1</label>
-            </div>
-            <div class="form-check-inline form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                <label class="form-check-label" for="inlineCheckbox2">2</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                <label class="form-check-label" for="inlineCheckbox3">3</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-                <label class="form-check-label" for="inlineCheckbox4">4</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-                <label class="form-check-label" for="inlineCheckbox5">5</label>
-            </div>
-            <div class="input-group d-flex justify-content-end">
-                <div class="form-outline d-flex col">
-                    <input type="search" id="form1" class="form-control"/>
-                    <label class="form-label" for="form1"></label>
-                </div>
-                <button href="./assets/Images /Logos/" class="btn btn-primary"><i class="bi bi-search"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-search" viewBox="0 0 16 16">
-                  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                </svg></i>
-                </button>
-            </div>
+<main> 
+  <div class="container-fluid bg-image d-flex justify-content-center">
+    <h1>Home of Amazing Events</h1>
+  </div>
+  <div class="m-5 backgc">
+    <div class="d-flex align-items-center  justify-content-around cont1section">
+      <div class="divcontainer">
+        <div class="form-check form-check-inline">
+          <input class="form-check-input"  type="checkbox"  id="inlineCheckbox1"  value="option1"/>
+          <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
         </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2"/>
+          <label class="form-check-label" for="inlineCheckbox2">Museum</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3"/><label class="form-check-label" for="inlineCheckbox3">Costume Party</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4"/>
+          <label class="form-check-label" for="inlineCheckbox4">Music Concert</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5"/>
+          <label class="form-check-label" for="inlineCheckbox5">Race</label>
+        </div>
+      </div>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-info" type="submit">Search</button>
+      </form>
     </div>
-<div class="container d-flex justify-content-center h-100">
-    <div class="formcontainer w-50">
-        <div class="row">
-            <div class="col-10">
-            <label for="exampleFormControlInput1" class="form-label">Name</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="John Jacob">
-            </div>  
-        </div>
-        <div class="row">
-            <div class="col-10">
-            <label for="exampleFormControlInput1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            </div>  
-        </div>
-        <div class="row">
-            <div class="col-10">
-            <label for="exampleFormControlTextarea1" class="form-label">Leave your email to get in contact:</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-        </div>
-    </div> 
-</div>    
+    <div class="container d-flex justify-content-center h-100">
+      <div class="formcontainer w-50">
+          <form action="process_form.php" method="POST">
+              <div class="row">
+                  <div class="col-10">
+                      <label for="name" class="form-label">Name</label>
+                      <input type="text" class="form-control" id="name" name="name" placeholder="John Jacob">
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-10">
+                      <label for="email" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-10">
+                      <label for="message" class="form-label">Leave your email to get in contact:</label>
+                      <textarea class="form-control" id="message" name="message" rows="3"></textarea>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-10">
+                      <button type="submit" class="btn btn-primary">Send</button>
+                  </div>
+              </div>
+          </form>
+      </div>
+  </div>
+  
 </main>
 <footer>
     <div class="container">
