--- a/pages/upcoming.html
+++ b/pages/upcoming.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary col-12 col-sm-12 col-md-12 col-lg-12" role="navigation">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary col-12 col-sm-12 col-md-12 col-lg-12" >
         <div class="container-fluid justify-content-around">
           <div class="container">
             <a class="navbar-brand" href="../index.html">
-              <img src="./assets/Logos/amazing_brand.png" alt="Bootstrap" width="48" height="25">
+              <img src="../assets/Logos/amazing_brand.png" alt="Bootstrap" width="55" height="30">
             </a>
           </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,46 +40,43 @@
             </ul>
           </div>
         </div>
+      </nav>  
     </header> 
 <main>
   <div class="container-fluid bg-image2 d-flex justify-content-center"> 
   <h1>Upcoming Events</h1>
    </div>
-    <div class="subnavcontain d-flex row align-baseline"> 
-        <div class="subnavrow d-flex column">
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                <label class="form-check-label" for="inlineCheckbox1">Category</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                <label class="form-check-label" for="inlineCheckbox2">Category</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                <label class="form-check-label" for="inlineCheckbox3">Category</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-                <label class="form-check-label" for="inlineCheckbox4">Category</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-                <label class="form-check-label" for="inlineCheckbox5">Category</label>
-            </div>
-            <div class="input-group d-flex justify-content-end">
-                <div class="form-outline d-flex col">
-                    <input type="search" id="form1" class="form-control"/>
-                    <label class="form-label" for="form1"></label>
-                </div>
-                <button href="./assets/Images /Logos/" class="btn btn-primary"><i class="bi bi-search"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-search" viewBox="0 0 16 16">
-                  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                </svg></i>
-                </button>
-            </div>
+   <div class="m-5 backgc">
+    <div class="d-flex align-items-center justify-content-around cont1section">
+      <div class="divcontainer">
+        <div class="form-check form-check-inline">
+          <input class="form-check-input"  type="checkbox"  id="inlineCheckbox1"  value="option1">
+          <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
         </div>
-    </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+          <label class="form-check-label" for="inlineCheckbox2">Museum</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3"><label class="form-check-label" for="inlineCheckbox3">Costume Party</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+          <label class="form-check-label" for="inlineCheckbox4">Music Concert</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
+          <label class="form-check-label" for="inlineCheckbox5">Race</label>
+        </div>
+      </div>
+      <form class="d-flex" role="search">
+        <button class="btn btn-outline-info" type="submit">Search</button>
+    </form>
     
+    </div>    
+  </div>
+    <div class="cardscontainer d-flex row flex-grow-1" id="cardsContain">   
+    </div>
 
 </main>
 <footer>
@@ -87,9 +84,9 @@
       <div class="row">
           <div class="col-md-6 ">
             <div class="d-flex gap-3">
-              <img class="footerpics" src="../assets/Logos/facebook.png" alt="Facebook picture"/>
-              <img class="footerpics" src="../assets/Logos/instagram.png" alt="Instagram picture"/>
-              <img class="footerpics" src="../assets/Logos/whatsapp.png" alt="Whatsapp picture"/>
+              <img class="footerpics" src="../assets/Logos/facebook.png" alt="Facebook picture">
+              <img class="footerpics" src="../assets/Logos/instagram.png" alt="Instagram picture">
+              <img class="footerpics" src="../assets/Logos/whatsapp.png" alt="Whatsapp picture">
             </div>
           </div>
           <div class="col-6 d-flex justify-content-end">
@@ -100,5 +97,7 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+<script src="../JS/data.js"></script>
+<script src="../JS/pastevents.js"></script>
 </body>
 </html>
