--- a/pages/contact.html
+++ b/pages/contact.html
@@ -43,38 +43,10 @@
         </div>
 </header> 
 <main> 
-  <div class="container-fluid bg-image d-flex justify-content-center">
+  <div class="container-fluid bg-image d-flex justify-content-center text-light align-items-center">
     <h1>Home of Amazing Events</h1>
   </div>
-  <div class="m-5 backgc">
-    <div class="d-flex align-items-center  justify-content-around cont1section">
-      <div class="divcontainer">
-        <div class="form-check form-check-inline">
-          <input class="form-check-input"  type="checkbox"  id="inlineCheckbox1"  value="option1"/>
-          <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2"/>
-          <label class="form-check-label" for="inlineCheckbox2">Museum</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3"/><label class="form-check-label" for="inlineCheckbox3">Costume Party</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4"/>
-          <label class="form-check-label" for="inlineCheckbox4">Music Concert</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5"/>
-          <label class="form-check-label" for="inlineCheckbox5">Race</label>
-        </div>
-      </div>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-info" type="submit">Search</button>
-      </form>
-    </div>
-    <div class="container d-flex justify-content-center h-100">
+    <div class="container d-flex justify-content-center p-4 m-2 border border-danger h-100">
       <div class="formcontainer w-50">
           <form action="process_form.php" method="POST">
               <div class="row">
