--- a/pages/stats.html
+++ b/pages/stats.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
+  <div class="layout d-flex flex-column"> 
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary col-12 col-sm-12 col-md-12 col-lg-12" role="navigation">
             <div class="container-fluid justify-content-around">
@@ -42,39 +43,10 @@
             </div>
         </header> 
 <main>
-    <div class="container-fluid bg-image3 d-flex justify-content-center">
+    <div class="container-fluid bg-image3 d-flex justify-content-center align-items-center">
         <h1>Statistics</h1>
       </div>
-    
-    
-      <div class="m-5 backgc">
-        <div class="d-flex align-items-center justify-content-around cont1section">
-          <div class="divcontainer">
-            <div class="form-check form-check-inline">
-              <input class="form-check-input"  type="checkbox"  id="inlineCheckbox1"  value="option1"/>
-              <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2"/>
-              <label class="form-check-label" for="inlineCheckbox2">Museum</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3"/><label class="form-check-label" for="inlineCheckbox3">Costume Party</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4"/>
-              <label class="form-check-label" for="inlineCheckbox4">Music Concert</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5"/>
-              <label class="form-check-label" for="inlineCheckbox5">Race</label>
-            </div>
-          </div>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-            <button class="btn btn-outline-info" type="submit">Search</button>
-          </form>
-        </div><div class="container-fluid col-12 col-sm-12 col-md-12 col-lg-12">
+<div class="container-fluid col-12 col-sm-12 col-md-12 col-lg-12">
     <div class="row">
         <div>
             <table class="table table-bordered p-5">
@@ -153,7 +125,7 @@
         </div>
     </div>
   </footer>
-
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="./main.js"></script>
 </body>
