--- a/pages/upcoming.html
+++ b/pages/upcoming.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
-    <header>
+  <div class="layout d-flex flex-column"> 
+  <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary col-12 col-sm-12 col-md-12 col-lg-12" >
         <div class="container-fluid justify-content-around">
           <div class="container">
@@ -43,7 +44,8 @@
       </nav>  
     </header> 
 <main>
-  <div class="container-fluid bg-image2 d-flex justify-content-center"> 
+  <div class=""></div>
+  <div class="container-fluid bg-image2 d-flex justify-content-center text-light align-items-center"> 
   <h1>Upcoming Events</h1>
    </div>
    <div class="m-5 backgc">
@@ -81,7 +83,7 @@
 </main>
 <footer>
   <div class="container">
-      <div class="row">
+      <div class="row d-flex">
           <div class="col-md-6 ">
             <div class="d-flex gap-3">
               <img class="footerpics" src="../assets/Logos/facebook.png" alt="Facebook picture">
@@ -95,9 +97,10 @@
       </div>
   </div>
 </footer>
-
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 <script src="../JS/data.js"></script>
 <script src="../JS/pastevents.js"></script>
+
 </body>
 </html>
