added checkboxes and filters

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,7 +42,7 @@
           </div>
         </div>
 </header> 
-<main> 
+<main class="div-flex-grow d-flex row"> 
   <div class="container-fluid bg-image d-flex justify-content-center text-light align-items-center">
     <h1>Home of Amazing Events</h1>
   </div>
