--- a/pages/stats.html
+++ b/pages/stats.html
@@ -108,7 +108,7 @@
     </div>
 </div>
 
-</main>
+</main class="div-flex-grow d-flex row">
 <footer>
     <div class="container">
         <div class="row">
