--- a/pages/details.html
+++ b/pages/details.html
@@ -43,27 +43,12 @@
             </div>
         </header> 
 
-<main>
-  <div class="jsMainCon">
+<main class="div-flex-grow d-flex row">
   <div class="container-fluid bg-image d-flex justify-content-center text-light align-items-center">
 <h1>Details</h1>
-</div>
-    <div class="container d-flex justify-content-center aling align-items-center border border-dark p-3 mt-2">
-      <div class="row">
-          <div class="col-6 object-fit-scale "><img src="https://i.postimg.cc/RZ9fH4Pr/halloween.jpg" alt="costume party" class="img-fluid"></div>
-          <div class="col-6 ">
-          <h3>Halloween Night</h3>
-          <p>Come in your scariest costume character to win amazing prizes.</p>
-          <p>Date: 2024-02-12</p>
-          <p>Category: Costume Party</p>
-          <p>Place: Room C</p>
-          <p>Capacity: 12000</p>
-          <p>Estimate: 9000</p>
-          <p>Price: $12</p>
-        </div>
-      </div> 
-    </div>
   </div>
+<div id="insertCardIntoContainer" class="container d-flex justify-content-center aling align-items-center border border-dark p-3 mt-2"> 
+</div>
 
 
 
@@ -84,5 +69,9 @@
   </footer>
 </div> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="../JS/data.js"></script>
+    <script src="../JS/index.js"></script>
+    <script src="../JS/details.js"></script>
+    
 </body>
 </html>
