--- a/pages/pastevents.html
+++ b/pages/pastevents.html
@@ -43,39 +43,25 @@
         </div>
       </nav>
           </header> 
-<main>
+<main class="div-flex-grow d-flex row">
       <div class="container-fluid bg-image4 d-flex justify-content-center text-light align-items-center">
           <h1>Past Events</h1>
       </div>
-      <div class="m-5 backgc">
-        <div class="d-flex align-items-center justify-content-around cont1section">
-          <div class="divcontainer">
-            <div class="form-check form-check-inline">
-              <input class="form-check-input"  type="checkbox"  id="inlineCheckbox1"  value="option1"/>
-              <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2"/>
-              <label class="form-check-label" for="inlineCheckbox2">Museum</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3"/><label class="form-check-label" for="inlineCheckbox3">Costume Party</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4"/>
-              <label class="form-check-label" for="inlineCheckbox4">Music Concert</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5"/>
-              <label class="form-check-label" for="inlineCheckbox5">Race</label>
-            </div>
-          </div>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-            <button class="btn btn-outline-info" type="submit">Search</button>
+      <div class="d-lg-flex justify-content-lg-between align-content-lg-center gap-2">
+        <div class="checksearch" id="checkContainer"></div>
+        <div>
+          <form class="navform" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-info" type="button">Search</button>
           </form>
-        </div>    
-        <div class="cardscontainer d-flex row flex-grow-1" id="cardsContain">   
+        </div>
+      </div> 
+        <div class="d-flex flex-wrap justify-content-center" id="cardsContain">   
         </div>   
       
   
@@ -100,6 +86,7 @@
  </div>   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="../JS/data.js"></script>
+    <script src="../JS/details.js"></script>
     <script src="../JS/pastevents.js"></script>
 </body>
 </html>
